--- a/css/zhuyestyle.css
+++ b/css/zhuyestyle.css
@@ -114,7 +114,7 @@ strike {
 
 .photo-bg {
     /* background-image: url(assets/background.jpg); */
-    background-image: url();
+    background-image: url(https://pic.downk.cc/item/5f5b6dac160a154a679333c2.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
